@@ -1,7 +1,7 @@
 package com.bayer.bhc.doc41webui.integration.sap.rfc;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -10,7 +10,7 @@ import com.bayer.bhc.doc41webui.integration.sap.util.SAPException;
 import com.sap.conn.jco.JCoFunction;
 import com.sap.conn.jco.JCoParameterList;
 
-public class CreateHttpPutRFC extends AbstractDoc41RFC<URL>{
+public class CreateHttpPutRFC extends AbstractDoc41RFC<URI>{
 	//TODO
 	private static final String IN_CREP_ID = "CREP_ID";
 	private static final String IN_DOC_ID = "DOC_ID";
@@ -28,7 +28,7 @@ public class CreateHttpPutRFC extends AbstractDoc41RFC<URL>{
         if (pFunction != null) {
             if (pInputParms != null) {
                 String crepId = (String) pInputParms.get(0);
-                String docId = (String) pInputParms.get(0);
+                String docId = (String) pInputParms.get(1);
                 
                 JCoParameterList sapInput = pFunction.getImportParameterList();
 				
@@ -46,20 +46,20 @@ public class CreateHttpPutRFC extends AbstractDoc41RFC<URL>{
 	}
 
 	@Override
-	public List<URL> processResult(JCoFunction pFunction)
+	public List<URI> processResult(JCoFunction pFunction)
 			throws SAPException {
 		try {
 			Doc41Log.get().debug(CreateHttpPutRFC.class, null, "processResult():ENTRY");
-			ArrayList<URL> mResult = new ArrayList<URL>();
+			ArrayList<URI> mResult = new ArrayList<URI>();
 			if (pFunction != null) {
-			    processReturnTable(pFunction);
+//			    processReturnTable(pFunction);
 			    checkReturnCode(pFunction, OUT_RETURNCODE,OUT_RETURN_MESSAGE);
 			    JCoParameterList exportParameterList = pFunction.getExportParameterList();
-			    mResult.add(new URL(exportParameterList.getString(OUT_URL)));
+			    mResult.add(new URI(exportParameterList.getString(OUT_URL)));
 			}
 			Doc41Log.get().debug(CreateHttpPutRFC.class, null, "processResult():EXIT");
 			return mResult;
-		} catch (MalformedURLException e) {
+		} catch (URISyntaxException e) {
 			throw new SAPException("invalid URL", e);
 		}
 	}
